--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,6 @@ repositories {
 
 dependencies {
     implementation group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.1.3.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
